--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -1,3 +1,23 @@
 .container {
     
 }
+
+.imgContainer {
+    width: 100%;
+    height: 300px;
+    position: relative;
+}
+
+.img{
+    object-fit: cover;
+    filter: grayscale(100%);
+}
+
+.imgText {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    background-color: #0be881;
+    padding: 5px;
+    color: white;
+}
