--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -21,3 +21,26 @@
     padding: 5px;
     color: white;
 }
+
+.imgTitle {
+    font-size: 30px;
+}
+
+.textContainer {
+    display: flex;
+    gap: 100px;
+}
+
+.item {
+    flex: 1;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.desc {
+    font-size: 18px;
+    font-weight: 300;
+    text-align: justify;
+}
