--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -22,10 +22,20 @@
   width: 100%;
   height: 500px;
   object-fit: cover;
+  animation: move 3s infinite ease alternate;
 }
 
 .desc {
   font-size: 24px;
   font-weight: 300;
+}
+
+@keyframes move {
+  from {
+    transform: translateY(-15px);
+  }
+  to {
+    transform: translateY(0px) scale(1.03);
+  }
 }
 
